# TinyBrowser

./: CMakeLists.txt  browser.cpp  layout_tests.cpp  mac-Info.plist  render.cpp
TinyBrowser-ios/: Info.plist
TinyBrowser-mac/: Info.plist
assets/: icon.icns
browser-android/jni/: Android.mk
