# $Id: CMakeLists.txt 1320 2014-10-26 08:12:52Z justin $

set(LFL_GLES2 1)
set(LFL_PNG 1)
set(LFL_JPEG 1)
set(LFL_GIF 1)
set(LFL_ICONV 1)
set(LFL_LIBCSS 1)
set(LFL_FREETYPE 1)
set(LFL_LFLINPUT 1)
set(LFL_LFLVIDEO 1)
set(LFL_OPENSSL 1)
set(LFL_V8JS 1)

if(LFL_ANDROID)
elseif(LFL_IPHONE)
else(LFL_ANDROID)
 set(LFL_GLEW 1)
 set(LFL_PORTAUDIO 1)
 set(LFL_FFMPEG 1)
 if(NOT WIN32)
  set(LFL_LAME 1)
  set(LFL_X264 1)
  set(LFL_GLOG 1)
 endif(NOT WIN32)
endif(LFL_ANDROID)

lfl_project(browser)
add_subdirectory(../core/lfapp ${CMAKE_CURRENT_BINARY_DIR}/lfapp_obj)
add_definitions(${LFAPP_DEF})
include_directories(${LFAPP_INCLUDE})

lfapp_add_target(lbrowser browser.cpp)
lfapp_post_build_start(lbrowser lbrowser LBrowser)

if(LFL_ANDROID)
elseif(LFL_IPHONE)
else(LFL_ANDROID)
lfapp_add_target(layout_tests layout_tests.cpp)
endif(LFL_ANDROID)

