# $Id: CMakeLists.txt 1320 2014-10-26 08:12:52Z justin $

lfl_clear_projects()
set(LFL_HEADLESS 1)
set(LFL_FLATBUFFERS 1)
set(LFL_FREETYPE 1)
set(LFL_LIBCSS 1)
set(LFL_V8JS 1)
set(LFL_ICONV 1)
set(LFL_PNG 1)
set(LFL_GIF 1)
set(LFL_JPEG 1)

if(LFL_ANDROID)
elseif(LFL_IPHONE)
else(LFL_ANDROID)
  set(LFL_GLEW 1)
  set(LFL_FFMPEG 1)
  set(LFL_PORTAUDIO 1)
  if(NOT WIN32)
    set(LFL_LAME 1)
    set(LFL_X264 1)
    set(LFL_GLOG 1)
  endif(NOT WIN32)
endif(LFL_ANDROID)

lfl_project(lbrowser-render-sandbox)
add_subdirectory(../core/lfapp ${CMAKE_CURRENT_BINARY_DIR}/${LFL_PROJECT}_lfapp_obj)
lfapp_add_target(lbrowser-render-sandbox render.cpp)
target_compile_definitions(lbrowser-render-sandbox PUBLIC ${LFAPP_DEF})
target_include_directories(lbrowser-render-sandbox PUBLIC ${LFAPP_INCLUDE})
lfapp_post_build_copy_bin(lbrowser-render-sandbox lbrowser-render-sandbox LBrowser)

lfl_clear_projects()
set(LFL_FLATBUFFERS 1)
set(LFL_LFLINPUT 1)
set(LFL_LFLVIDEO 1)
set(LFL_GLES2 1)
set(LFL_OPENSSL 1)
set(LFL_PNG 1)

set(LFL_SINGLE_THREADED_BROWSER 1)
if(LFL_SINGLE_THREADED_BROWSER)
  set(LFL_FREETYPE 1)
  set(LFL_LIBCSS 1)
  set(LFL_V8JS 1)
  set(LFL_ICONV 1)
  set(LFL_PNG 1)
  set(LFL_GIF 1)
  set(LFL_JPEG 1)
endif()

if(LFL_ANDROID)
elseif(LFL_IPHONE)
else()
  set(LFL_GLEW 1)
  if(NOT WIN32)
    set(LFL_GLOG 1)
  endif()
endif()

lfl_project(lbrowser)
add_subdirectory(../core/lfapp ${CMAKE_CURRENT_BINARY_DIR}/${LFL_PROJECT}_lfapp_obj)
lfapp_add_target(lbrowser browser.cpp)
target_compile_definitions(lbrowser PUBLIC ${LFAPP_DEF})
target_include_directories(lbrowser PUBLIC ${LFAPP_INCLUDE})
lfapp_post_build_start(lbrowser lbrowser LBrowser)

if(LFL_ANDROID)
elseif(LFL_IPHONE)
else(LFL_ANDROID)
lfapp_add_target(layout_tests layout_tests.cpp)
endif(LFL_ANDROID)
